[package]
name = "rlx-mlx"
version                = "0.2.2"
edition.workspace      = true
rust-version.workspace = true
description = "MLX backend for RLX — Apple's array framework via hand-rolled C++ shim, eager + lazy execution"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true

[features]
default = []

[dependencies]
rlx-mlx-sys = { path = "../rlx-mlx-sys", version = "0.2.2" }
rlx-ir = { path = "../rlx-ir", version = "0.2.2" }
rlx-opt = { path = "../rlx-opt", version = "0.2.2" }
rlx-gguf = { path = "../rlx-gguf", version = "0.2.1" }

[target.'cfg(target_os = "macos")'.dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rlx-cpu = { path = "../rlx-cpu", version = "0.2.3", default-features = false, features = ["blas", "splat"] }

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets        = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args   = ["--cfg", "docsrs"]
all-features  = false
