[package]
name = "rlx-models"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "Model loading for RLX — config parsing, safetensors weights, BERT/NomicBERT graph builders"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
[dependencies]
rlx-ir = { path = "../rlx-ir", version = "0.2.0" }
rlx-runtime = { path = "../rlx-runtime", version = "0.2.0", features = ["cpu"] }
# Direct dep so host-side SAM decoder can call `rlx_cpu::blas::sgemm_auto`
# instead of naive Rust matmuls (8× speedup on the SAM mask decoder).
rlx-cpu = { path = "../rlx-cpu", version = "0.2.0" }
rlx-gguf = { path = "../rlx-gguf", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
half = { version = "2", features = ["bytemuck"] }
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }

# Optional cross-framework dependencies for DINOv2 parity testing + benching
# against candle. Use local path deps so we don't trigger network fetches
# during ordinary builds. Override to crates.io ("0.10") for portable CI.
candle-core         = { path = "../../candle/candle-core",         optional = true }
candle-nn           = { path = "../../candle/candle-nn",           optional = true }
candle-transformers = { path = "../../candle/candle-transformers", optional = true }
image               = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
hf-download = ["dep:hf-hub"]
# Backend feature passthroughs. Enable a feature here to get
# `Device::Metal`/`Mlx`/`Cuda`/`Gpu` working for callers (e.g. SAM
# encoders via `Sam::from_safetensors_on(weights, cfg, Device::Metal)`).
# The default build is CPU-only; passthroughs avoid pulling in the
# GPU runtime crates unless asked.
metal = ["rlx-runtime/metal"]
mlx   = ["rlx-runtime/mlx"]
gpu   = ["rlx-runtime/gpu"]
cuda  = ["rlx-runtime/cuda"]
rocm  = ["rlx-runtime/rocm"]
tpu   = ["rlx-runtime/tpu"]
# Cross-framework DINOv2 parity test + bench (uses candle as reference).
# Gated so plain `cargo test` and `cargo build` stay candle-free.
parity-candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:image",
]
# Use the same `gemm` crate candle uses for CPU sgemm. Produces
# byte-for-byte identical f32 output vs candle. Enable in combination
# with `parity-candle` for true bit-exact CPU SAM parity.
parity-gemm = ["rlx-cpu/parity-gemm"]
# SAM 2 parity test placeholder. Off by default. Phase 1B will wire a
# pyo3 dep here and turn the test on; until then the feature declares
# the cfg so the gated `tests/sam2_parity.rs` doesn't trip
# `unexpected_cfgs` warnings on plain builds.
parity-pytorch = []

[[bin]]
name = "rlx-run"
path = "src/bin/rlx_run.rs"

[[bench]]
name = "qwen3_inference"
harness = false

[[bench]]
name = "dinov2_vs_candle"
harness = false
required-features = ["parity-candle"]

[[bench]]
name = "sam_vs_candle"
harness = false
required-features = ["parity-candle"]

[lints]
workspace = true
