[package]
name = "rlx-opt"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "Graph optimization passes for RLX IR — fusion, memory planning, scheduling"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true
[dependencies]
rlx-ir = { path = "../rlx-ir", version = "0.2.0" }

[lints]
workspace = true
