[package]
name = "rlx-opt"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
description = "RLX optimizer facade — fusion, autodiff, and compile pipelines"
authors.workspace      = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"
repository.workspace   = true
homepage.workspace     = true
documentation.workspace = true

[features]
default = ["compile", "training"]
compile = ["dep:rlx-compile"]
training = ["dep:rlx-autodiff", "rlx-compile/training"]
full = ["compile", "training"]

[dependencies]
rlx-ir = { path = "../rlx-ir", version = "0.2.0" }
rlx-fusion = { path = "../rlx-fusion", version = "0.2.0" }
rlx-compile = { path = "../rlx-compile", version = "0.2.0", optional = true }
rlx-autodiff = { path = "../rlx-autodiff", version = "0.2.0", optional = true }

[lints]
workspace = true
